fix(.fake-button): adjust the size on small screen

--- a/style/main.scss
+++ b/style/main.scss
@@ -86,7 +86,7 @@ footer h1{
     color: $very-light-gray;
     letter-spacing: 2px;
     border: 1px solid $very-light-gray;
-    padding: 10px 40px;
+    padding: 10px 35px;
 }
 
 .fake-button a:hover{
@@ -94,7 +94,7 @@ footer h1{
     color: $dark-violet;
     background-color: $very-light-gray;
     font-weight: 700;
-    padding: 10px 40px;
+    padding: 10px 30px;
 }
 
 .img-fluid{
