--- a/style/style.css
+++ b/style/style.css
@@ -333,7 +333,7 @@ footer h1 {
   color: #fafafa;
   letter-spacing: 2px;
   border: 1px solid #fafafa;
-  padding: 10px 40px;
+  padding: 10px 35px;
 }
 
 .fake-button a:hover {
@@ -341,7 +341,7 @@ footer h1 {
   color: #2d2640;
   background-color: #fafafa;
   font-weight: 700;
-  padding: 10px 40px;
+  padding: 10px 30px;
 }
 
 .img-fluid {
